@@ -44,10 +44,6 @@ import static org.hamcrest.Matchers.instanceOf;
 @ESIntegTestCase.ClusterScope(scope = ESIntegTestCase.Scope.TEST)
 public class GetHealthActionIT extends ESIntegTestCase {
 
-    private static final String DATA_COMPONENT_NAME = "test_data"; // prefixing with "test_" to avoid collisions with the real component
-    private static final String CLUSTER_COORDINATION_COMPONENT_NAME = "test_cluster_coordination";
-    private static final String NONEXISTENT_COMPONENT_NAME = "test_nonexistent";
-
     private static final String ILM_INDICATOR_NAME = "ilm";
     private static final String SLM_INDICATOR_NAME = "slm";
     private static final String INSTANCE_HAS_MASTER_INDICATOR_NAME = "instance_has_master";
@@ -123,18 +119,11 @@ public class GetHealthActionIT extends ESIntegTestCase {
     public static class TestHealthIndicatorService implements HealthIndicatorService {
 
         private final ClusterService clusterService;
-        private final String componentName;
         private final String indicatorName;
         private final Setting<HealthStatus> statusSetting;
 
-        public TestHealthIndicatorService(
-            ClusterService clusterService,
-            String componentName,
-            String indicatorName,
-            Setting<HealthStatus> statusSetting
-        ) {
+        public TestHealthIndicatorService(ClusterService clusterService, String indicatorName, Setting<HealthStatus> statusSetting) {
             this.clusterService = clusterService;
-            this.componentName = componentName;
             this.indicatorName = indicatorName;
             this.statusSetting = statusSetting;
         }
@@ -142,11 +131,6 @@ public class GetHealthActionIT extends ESIntegTestCase {
         @Override
         public String name() {
             return indicatorName;
-        }
-
-        @Override
-        public String component() {
-            return componentName;
         }
 
         @Override
@@ -164,24 +148,19 @@ public class GetHealthActionIT extends ESIntegTestCase {
 
     public static final class IlmHealthIndicatorService extends TestHealthIndicatorService {
         public IlmHealthIndicatorService(ClusterService clusterService) {
-            super(clusterService, DATA_COMPONENT_NAME, ILM_INDICATOR_NAME, ILM_HEALTH_STATUS_SETTING);
+            super(clusterService, ILM_INDICATOR_NAME, ILM_HEALTH_STATUS_SETTING);
         }
     }
 
     public static final class SlmHealthIndicatorService extends TestHealthIndicatorService {
         public SlmHealthIndicatorService(ClusterService clusterService) {
-            super(clusterService, DATA_COMPONENT_NAME, SLM_INDICATOR_NAME, SLM_HEALTH_STATUS_SETTING);
+            super(clusterService, SLM_INDICATOR_NAME, SLM_HEALTH_STATUS_SETTING);
         }
     }
 
     public static final class ClusterCoordinationHealthIndicatorService extends TestHealthIndicatorService {
         public ClusterCoordinationHealthIndicatorService(ClusterService clusterService) {
-            super(
-                clusterService,
-                CLUSTER_COORDINATION_COMPONENT_NAME,
-                INSTANCE_HAS_MASTER_INDICATOR_NAME,
-                CLUSTER_COORDINATION_HEALTH_STATUS_SETTING
-            );
+            super(clusterService, INSTANCE_HAS_MASTER_INDICATOR_NAME, CLUSTER_COORDINATION_HEALTH_STATUS_SETTING);
         }
     }
 
@@ -200,29 +179,22 @@ public class GetHealthActionIT extends ESIntegTestCase {
                     .put(CLUSTER_COORDINATION_HEALTH_STATUS_SETTING.getKey(), clusterCoordinationIndicatorStatus)
             );
 
-            // First, test that we don't request any components or indicators, and get back everything (but no details):
+            // First, test that we don't request any indicators, and get back everything (but no details):
             testRootLevel(client, ilmIndicatorStatus, slmIndicatorStatus, clusterCoordinationIndicatorStatus, false);
             // Now, test the same thing but get back details):
             testRootLevel(client, ilmIndicatorStatus, slmIndicatorStatus, clusterCoordinationIndicatorStatus, true);
 
-            // Next, test that if we ask for a specific component and indicator, we get only those back (without details):
-            testComponentAndIndicator(client, ilmIndicatorStatus, false);
+            // Next, test that if we ask for a specific indicator, we get only those back (without details):
+            testIndicator(client, ilmIndicatorStatus, false);
             // And now with details:
-            testComponentAndIndicator(client, ilmIndicatorStatus, true);
+            testIndicator(client, ilmIndicatorStatus, true);
 
-            // Test that if we specify a component name and no indicator name that we get all indicators for that component (no details):
-            testComponentNoIndicator(client, ilmIndicatorStatus, slmIndicatorStatus, false);
-            // And now with details:
-            testComponentNoIndicator(client, ilmIndicatorStatus, slmIndicatorStatus, false);
-
-            // Next, test that if we ask for a nonexistent component and indicator, we get an exception
+            // Next, test that if we ask for a nonexistent indicator, we get an exception
             {
                 ExecutionException exception = expectThrows(
                     ExecutionException.class,
-                    () -> client.execute(
-                        GetHealthAction.INSTANCE,
-                        new GetHealthAction.Request(NONEXISTENT_COMPONENT_NAME, NONEXISTENT_INDICATOR_NAME, randomBoolean())
-                    ).get()
+                    () -> client.execute(GetHealthAction.INSTANCE, new GetHealthAction.Request(NONEXISTENT_INDICATOR_NAME, randomBoolean()))
+                        .get()
                 );
                 assertThat(exception.getCause(), instanceOf(ResourceNotFoundException.class));
             }
@@ -252,121 +224,50 @@ public class GetHealthActionIT extends ESIntegTestCase {
         );
         assertThat(response.getClusterName(), equalTo(new ClusterName(cluster().getClusterName())));
         assertThat(
-            response.findComponent(DATA_COMPONENT_NAME),
+            response.findIndicator(ILM_INDICATOR_NAME),
             equalTo(
-                new HealthComponentResult(
-                    DATA_COMPONENT_NAME,
-                    HealthStatus.merge(Stream.of(ilmIndicatorStatus, slmIndicatorStatus)),
-                    List.of(
-                        new HealthIndicatorResult(
-                            ILM_INDICATOR_NAME,
-                            DATA_COMPONENT_NAME,
-                            ilmIndicatorStatus,
-                            "Health is set to [" + ilmIndicatorStatus + "] by test plugin",
-                            new SimpleHealthIndicatorDetails(Map.of("explain", explain)),
-                            Collections.emptyList(),
-                            Collections.emptyList()
-                        ),
-                        new HealthIndicatorResult(
-                            SLM_INDICATOR_NAME,
-                            DATA_COMPONENT_NAME,
-                            slmIndicatorStatus,
-                            "Health is set to [" + slmIndicatorStatus + "] by test plugin",
-                            new SimpleHealthIndicatorDetails(Map.of("explain", explain)),
-                            Collections.emptyList(),
-                            Collections.emptyList()
-                        )
-                    )
+                new HealthIndicatorResult(
+                    ILM_INDICATOR_NAME,
+                    ilmIndicatorStatus,
+                    "Health is set to [" + ilmIndicatorStatus + "] by test plugin",
+                    new SimpleHealthIndicatorDetails(Map.of("explain", explain)),
+                    Collections.emptyList(),
+                    Collections.emptyList()
                 )
             )
         );
         assertThat(
-            response.findComponent(CLUSTER_COORDINATION_COMPONENT_NAME),
+            response.findIndicator(INSTANCE_HAS_MASTER_INDICATOR_NAME),
             equalTo(
-                new HealthComponentResult(
-                    CLUSTER_COORDINATION_COMPONENT_NAME,
+                new HealthIndicatorResult(
+                    INSTANCE_HAS_MASTER_INDICATOR_NAME,
                     clusterCoordinationIndicatorStatus,
-                    List.of(
-                        new HealthIndicatorResult(
-                            INSTANCE_HAS_MASTER_INDICATOR_NAME,
-                            CLUSTER_COORDINATION_COMPONENT_NAME,
-                            clusterCoordinationIndicatorStatus,
-                            "Health is set to [" + clusterCoordinationIndicatorStatus + "] by test plugin",
-                            new SimpleHealthIndicatorDetails(Map.of("explain", explain)),
-                            Collections.emptyList(),
-                            Collections.emptyList()
-                        )
-                    )
+                    "Health is set to [" + clusterCoordinationIndicatorStatus + "] by test plugin",
+                    new SimpleHealthIndicatorDetails(Map.of("explain", explain)),
+                    Collections.emptyList(),
+                    Collections.emptyList()
                 )
             )
         );
     }
 
-    private void testComponentAndIndicator(Client client, HealthStatus ilmIndicatorStatus, boolean explain) throws Exception {
-        var response = client.execute(
-            GetHealthAction.INSTANCE,
-            new GetHealthAction.Request(DATA_COMPONENT_NAME, ILM_INDICATOR_NAME, explain)
-        ).get();
+    private void testIndicator(Client client, HealthStatus ilmIndicatorStatus, boolean explain) throws Exception {
+        var response = client.execute(GetHealthAction.INSTANCE, new GetHealthAction.Request(ILM_INDICATOR_NAME, explain)).get();
         assertNull(response.getStatus());
         assertThat(response.getClusterName(), equalTo(new ClusterName(cluster().getClusterName())));
         assertThat(
-            response.findComponent(DATA_COMPONENT_NAME),
+            response.findIndicator(ILM_INDICATOR_NAME),
             equalTo(
-                new HealthComponentResult(
-                    DATA_COMPONENT_NAME,
-                    null,
-                    List.of(
-                        new HealthIndicatorResult(
-                            ILM_INDICATOR_NAME,
-                            DATA_COMPONENT_NAME,
-                            ilmIndicatorStatus,
-                            "Health is set to [" + ilmIndicatorStatus + "] by test plugin",
-                            new SimpleHealthIndicatorDetails(Map.of("explain", explain)),
-                            Collections.emptyList(),
-                            Collections.emptyList()
-                        )
-                    )
+                new HealthIndicatorResult(
+                    ILM_INDICATOR_NAME,
+                    ilmIndicatorStatus,
+                    "Health is set to [" + ilmIndicatorStatus + "] by test plugin",
+                    new SimpleHealthIndicatorDetails(Map.of("explain", explain)),
+                    Collections.emptyList(),
+                    Collections.emptyList()
                 )
             )
         );
-        expectThrows(NoSuchElementException.class, () -> response.findComponent(CLUSTER_COORDINATION_COMPONENT_NAME));
-    }
-
-    private void testComponentNoIndicator(Client client, HealthStatus ilmIndicatorStatus, HealthStatus slmIndicatorStatus, boolean explain)
-        throws Exception {
-        var response = client.execute(GetHealthAction.INSTANCE, new GetHealthAction.Request(DATA_COMPONENT_NAME, null, explain)).get();
-        assertNull(response.getStatus());
-        assertThat(response.getClusterName(), equalTo(new ClusterName(cluster().getClusterName())));
-        assertThat(
-            response.findComponent(DATA_COMPONENT_NAME),
-            equalTo(
-                new HealthComponentResult(
-                    DATA_COMPONENT_NAME,
-                    HealthStatus.merge(Stream.of(ilmIndicatorStatus, slmIndicatorStatus)),
-                    List.of(
-                        new HealthIndicatorResult(
-                            ILM_INDICATOR_NAME,
-                            DATA_COMPONENT_NAME,
-                            ilmIndicatorStatus,
-                            "Health is set to [" + ilmIndicatorStatus + "] by test plugin",
-                            new SimpleHealthIndicatorDetails(Map.of("explain", explain)),
-                            Collections.emptyList(),
-                            Collections.emptyList()
-                        ),
-                        new HealthIndicatorResult(
-                            SLM_INDICATOR_NAME,
-                            DATA_COMPONENT_NAME,
-                            slmIndicatorStatus,
-                            "Health is set to [" + slmIndicatorStatus + "] by test plugin",
-                            new SimpleHealthIndicatorDetails(Map.of("explain", explain)),
-                            Collections.emptyList(),
-                            Collections.emptyList()
-                        )
-                    )
-                )
-            )
-        );
-        expectThrows(NoSuchElementException.class, () -> response.findComponent(CLUSTER_COORDINATION_COMPONENT_NAME));
-
+        expectThrows(NoSuchElementException.class, () -> response.findIndicator(SLM_INDICATOR_NAME));
     }
 }
